Archive2/65/d6f600751f49ab/output
main.cpp:5:21: error: unterminated argument list invoking macro "B"
 #if defined(A) && B(1
                     ^
main.cpp: In function 'int main()':
main.cpp:13:18: error: 'D' was not declared in this scope
     std::cout << D << '\n';
                  ^
