Archive2/65/d6f600751f49ab/main.cpp
#include <iostream>

#define B(x) x

#if defined(A) && B(1
#undef D
#define D 2
)
#endif

int main()
{
    std::cout << D << '\n';
}
